kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sales-ui
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: sales-ui
