kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salesui-app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo-ai.augustasoftsol.com
      secretName: augusta-cert
  rules:
    - host: "demo-ai.augustasoftsol.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sales-ui
                port:
                  number: 80
